<resources>
    <string name="app_name">NurseBot</string>
    <string name="add_new_prescription">Add New Prescription</string>
    <string name="patient_name">Patient name</string>
    <string name="bed_number">Bed number</string>
    <string name="medicines">Medicines:</string>
    <string name="save_prescription_to_database">Save prescription to database</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="med_name">Med name</string>
    <string name="box_no">Box no</string>
    <string name="med_time">Med time</string>
    <string name="morning">Morning</string>
    <string name="remove_this_entry">Remove this entry</string>
    <string name="discard_all_entry">Discard all entry</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
</resources>