<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.PrescriptionAddActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_patient_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/patient_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_patient_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_bed_no"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_patient_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/bed_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_bed_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_bed_no"
        android:layout_margin="4dp"
        android:text="@string/medicines"
        android:textSize="20sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llc_medicine_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_medicine"
        android:orientation="vertical">

        <include layout="@layout/form_medicine_item" />

        <include layout="@layout/medicine_add_form_item" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llc_medicine_list"
        android:layout_alignParentEnd="true"
        android:text="@string/add_medicine" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/save_prescription_to_database"
        android:src="@android:drawable/ic_menu_save" />

</RelativeLayout>